@@ -119,6 +119,7 @@
 %include "dolfin/mesh/MeshData.h"
 %include "dolfin/mesh/MeshConnectivity.h"
 %include "dolfin/mesh/MeshEditor.h"
+%include "dolfin/mesh/DynamicMeshEditor.h"
 %include "dolfin/mesh/MeshFunction.h"
 %include "dolfin/mesh/Mesh.h"
 %include "dolfin/mesh/MPIMeshCommunicator.h"
