@@ -1,3 +1,4 @@
+ - Add new function is_combatible() for checking compatibility of boundary conditions
  - Use x as initial guess in Krylov solvers (PETSc, uBLAS, ITL)
  - Add new function errornorm()
  - Add harmonic ALE mesh smoothing
